--- a/corporate.html
+++ b/corporate.html
@@ -93,22 +93,30 @@
 	</head>
 
 	<body>
+		<div id="controls_wrapper">
+			<span id="settings"></span>
+			<div id="controls">
+				<ul>
+					<li><a href="" title=""><span id="up-arrow"></span></a></li>
+					<li><a href="" title=""><span id="rss"></span></a></li>
+					<li><a href="" title=""><span id="mode"></span></a></li>
+					<li><a href="" title=""><span id="extras"></span></a></li>
+					<li><a href="" title=""><span id="down-arrow"></span></a></li>					
+				</ul>			
+			</div>			
+		</div>
 		<header id="header">	 
 			<nav id="nav">
 				<ul>
-					<li><a href="#slide1" title="Home" >HOME</li>
+					<li><a href="#slide1" title="Home" ><span class="home"></span></a></li>
 					<li><a href="#slide2" title="About Us" >ABOUT US</a></li>
 					<li><a href="#slide3" title="Services">SPONSORSHIP</a></li>
-					<li><a href="#slide4" title="Our Clients">COACHING</a></li>
+					<li><a href="#slide4" title="Our Clients">ADVERTISE</a></li>
+					<li><a href="#copyright" title="Contact Us">SOCCER STREET</a></li>
+					<li><a href="#copyright" title="Contact Us">SOCCER PROGRAMS</a></li>
 					<li><a href="#copyright" title="Contact Us">CONTACT US</a></li>
 				</ul>
 			</nav>
-
-			<div id="follow"><a href="https://www.facebook.com/h2omollo" target="_blank"><img src="img/facebook-4-32.png"/></a>
-				<a href="https://www.twitter.com/h2omowater" target="_blank"><img src="img/twitter-4-32.png"/></a>
-				<a href="http://www.instagram.com/h2omowater" target="_blank"><img src="img/instagram-4-32.png"/></a>
-			</div>
-
 		</header>
 		<div id="slide1">
 			<div id="slide1-over">
@@ -116,7 +124,7 @@
 					<div class="text">
 						<h1>India Youth Soccer </h1>
 						<p>The India Youth Soccer Association is non-profit making educational Charitable Trust whose mission is to foster the physical, mental and emotional growth and development of India's youth through the sport of soccer at all levels of age and competition.</p>
-						<a href="" class="scroll"><span class="da-img bounce" id="ball"> </span> </a>
+						<a href="" class="scroll"><span class="ball bounce" id="ball"> </span> </a>
 						<a href="#slide2" class="da-link">Know more</a>
 					</div>
 				</div> 
@@ -126,10 +134,8 @@
 		<div id="slide2">
 			<div class="content">
 				<div class="text">
-					<h2>SERVICES</h2>
-					<p>We have designed our services with the needs of our customers and clients in mind.Rapid, accurate, timely in timing of the agents, last moment changes, immediate ramp of staff. We have capacity to cater to any volume of staff at the shortest notice and with quality service. we offer 24 / 7 hr service to our customers. We provide bus transportation & four wheelers on rent to our customer as per their requirement. We use easy and user friendly systems. We provide educated and Knowledgeable staff, who can understand the customers requirement easily. We give our Clients unprecedented personal access to information about all the reports. We provide training to our staff and drivers.Route map analysis, Vehicle tracking, Pick-up / drop co-ordination, Safety measures, Vehicle / driver co-ordination, Vehicle papaer updation, Vehicle inspection for road worthiness, Data entry, Rostering, Preparing reports are all the part of our service. 
-					</p>
-					<p>Our Mission is to provide the best services of bus transport as well as other four wheelers to the clients as per their requirement. Under the able leadership of Mr. Sudesh Kumar Sharma we have been striving to provide complete customer satisfaction for the last 20 years . 
+					<h2>ABOUT US</h2>
+					<p>The India Youth Soccer Association is non-profit making educational Charitable Trust whose mission is to foster the physical, mental and emotional growth and development of India's youth through the sport of soccer at all levels of age and competition. Our job is also to make it fun, and instill in young players a lifelong passion for the sport. The India Youth Soccer Association promotes fair play, and offers leadership in the development of youth soccer in India. At the India Youth Soccer Association, we aim to provide a fun, safe and healthy game for ALL children, rich and poor, boys and girls. Those in Government schools, private schools and the millions who spend part or all of their childhood out of school. Children who want to play for fun, or want to compete at the highest level, who want to play for one season, or who want to play for a lifetime. At the India Youth Soccer Association we recognise that modern soccer for children has been neglected by schools and soccer organisations and that there is a desperate need to give our children the opportunities to play and enjoy that are found in other countries. 
 					</p>
 				</div>
 				<div class="image">
